--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,18 +4,18 @@
   "description": "SiPresisi adalah aplikasi presensi online",
   "icons": [
     {
-      "src": "/icons/logo.png",
+      "src": "/logo.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icons/android-chrome-logo.png",
+      "src": "/logo.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/icons/logo.png",
+      "src": "/logo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
