--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,24 +4,23 @@
   "description": "SiPresisi adalah aplikasi presensi online",
   "icons": [
     {
-      "src": "/logo.png",
+      "src": "/icon_x96.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
-      "src": "/logo.png",
+      "src": "/icon_x128.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/logo.png",
+      "src": "/icon_x192.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "theme_color": "#FFFFFF",
-  "background_color": "#FFFFFF",
+  "theme_color": "bg-blue-500",
+  "background_color": "bg-blue-500",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait"
