--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,23 +4,26 @@
   "description": "SiPresisi adalah aplikasi presensi online",
   "icons": [
     {
-      "src": "/icon_x96.png",
+      "src": "/maskable_icon_x96.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
-      "src": "/icon_x128.png",
+      "src": "/maskable_icon_x128.png",
       "sizes": "384x384",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
-      "src": "/icon_x192.png",
+      "src": "/maskable_icon_x192.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
-  "theme_color": "bg-blue-500",
-  "background_color": "bg-blue-500",
+  "theme_color": "rgb(59 130 2461))",
+  "background_color": "rgb(59 130 2461)",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait"
