--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,22 +7,20 @@
       "src": "/maskable_icon_x96.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     },
     {
       "src": "/maskable_icon_x128.png",
       "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     },
     {
       "src": "/maskable_icon_x192.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     }
   ],
-  "theme_color": "rgb(59 130 2461))",
+  "theme_color": "rgb(59 130 2461)",
   "background_color": "rgb(59 130 2461)",
   "start_url": "/",
   "display": "standalone",
