--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,12 @@
       "src": "/maskable_icon_x96.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "maskable"
+    },
+    {
+      "src": "/maskable_icon_x96.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
       "src": "/maskable_icon_x128.png",
