--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.3.1",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "moment-timezone": "^0.5.47",
     "next": "15.1.7",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/date-fns": "^2.5.3",
     "@types/leaflet": "^1.9.16",
     "@types/node": "^20",
     "@types/react": "^19",
