--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "leaflet": "^1.9.4",
     "moment-timezone": "^0.5.47",
     "next": "15.1.7",
