--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "date-fns-tz": "^3.2.0",
     "leaflet": "^1.9.4",
     "moment-timezone": "^0.5.47",
-    "next": "15.6.0-canary.60",
+    "next": "^15.1.9",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
